Fix event text vertical alignment in Firefox

--- a/app/javascript/stylesheets/application_v2/organisms/_fullcalendar.scss
+++ b/app/javascript/stylesheets/application_v2/organisms/_fullcalendar.scss
@@ -150,7 +150,7 @@
 
   .fc-event-main-frame {
     flex-direction: row;
-    align-items: baseline;
+    align-items: center;
     line-height: 1.7;
   }
 
